Fri Nov  5 16:05:32 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: TkComm._at() supprts both of "@x,y" and "@x"

Fri Nov  5 13:22:58 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/text.rb: sorry. bug fix again.

Fri Nov  5 13:17:54 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/text.rb: bug fix

Fri Nov  5 08:34:43 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (str_gsub): should have removed rb_str_unlocktmp(str).
	  [ruby-dev:24708]

	* ext/socket/socket.c (s_recvfrom): buffer modification check.
	  [ruby-dev:24708]

Thu Nov  4 23:54:21 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regexec.c, regparse.c, regint.h: fixed conflicts between
	vendor branch.

Thu Nov  4 23:41:55 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* ascii.c, euc_jp.c, oniggnu.h, oniguruma.h, regcomp.c,
	regenc.c, regenc.h, regerror.c, regexec.c, reggnu.c,
	regint.h, regparse.c, regparse.h, sjis.c, utf8.c:
	imported Oni Guruma 3.4.0.

	* parse.y, re.c: Now mbclen() takes unsigned char as
	its argument.

Thu Nov  4 21:25:38 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (str_gsub): string modify check no longer based on
	  tmplock.  [ruby-dev:24706]

Thu Nov  4 21:13:48 2004  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c(typelib_file_from_typelib): search "win16" 
	  entry to get library path. 

	* ext/win32ole/win32ole.c(oletypelib_path): ditto.

	* ext/win32ole/win32ole.c(ole_typedesc2val): add VT_LPWSTR, VT_LPSTR,
	  VT_ERROR case.

Thu Nov  4 15:02:14 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb: forget to initialize instance_variables
	  of TkVarAccess objects

Thu Nov  4 09:11:35 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (gc_mark): enable GC stack checking.

Thu Nov  4 03:11:33 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (str_gsub): lock strings temporarily.  [ruby-dev:24687]
