@@ -4,14 +4,9 @@
 require 'tk'
 
 module Tk
-  module Scrollable
+  module X_Scrollable
     def xscrollcommand(cmd=Proc.new)
       configure_cmd 'xscrollcommand', cmd
-      # Tk.update  # avoid scrollbar trouble
-      self
-    end
-    def yscrollcommand(cmd=Proc.new)
-      configure_cmd 'yscrollcommand', cmd
       # Tk.update  # avoid scrollbar trouble
       self
     end
@@ -31,6 +26,25 @@ module Tk
       xview('scroll', *index)
     end
 
+    def xscrollbar(bar=nil)
+      if bar
+        @xscrollbar = bar
+        @xscrollbar.orient 'horizontal'
+        self.xscrollcommand {|*arg| @xscrollbar.set(*arg)}
+        @xscrollbar.command {|*arg| self.xview(*arg)}
+        Tk.update  # avoid scrollbar trouble
+      end
+      @xscrollbar
+    end
+  end
+
+  module Y_Scrollable
+    def yscrollcommand(cmd=Proc.new)
+      configure_cmd 'yscrollcommand', cmd
+      # Tk.update  # avoid scrollbar trouble
+      self
+    end
+
     def yview(*index)
       if index.size == 0
         list(tk_send_without_enc('yview'))
@@ -46,16 +60,6 @@ module Tk
       yview('scroll', *index)
     end
 
-    def xscrollbar(bar=nil)
-      if bar
-        @xscrollbar = bar
-        @xscrollbar.orient 'horizontal'
-        self.xscrollcommand {|*arg| @xscrollbar.set(*arg)}
-        @xscrollbar.command {|*arg| self.xview(*arg)}
-        Tk.update  # avoid scrollbar trouble
-      end
-      @xscrollbar
-    end
     def yscrollbar(bar=nil)
       if bar
         @yscrollbar = bar
@@ -66,5 +70,10 @@ module Tk
       end
       @yscrollbar
     end
+  end
+
+  module Scrollable
+    include X_Scrollable
+    include Y_Scrollable
   end
 end
